--- a/day12/ex25/main3.css
+++ b/day12/ex25/main3.css
@@ -1,14 +1,13 @@
 body {
-    display : flex;
-    margin: 0px;   
-    padding: 0px; 
+    display: flex;
     background-color: blue;
+    margin: 0px;
+    padding: 0px;
     color: white;
-    font-family: 'RoundedFixedsys';
-    flex-direction: column;  
+    font-family: 'RoundedFixedsys';    
+    flex-direction: column;
     height: 100vh;
 
-    
 }
 
 @font-face {
@@ -19,40 +18,41 @@ body {
 }
 
 header {
-    display : flex;
+    display: flex;
     padding: 16px;
+    /* background-color: yellow; */
+    /* color: black; */
     justify-content: flex-end;
 }
 
 footer {
-    display : flex;
+    display: flex;
     padding: 16px;
-   
+    /* background-color: black; */
+    /* color: white; */
 }
 
 main {
     display: flex;
-    flex: 1;
+    flex : 1;
     flex-direction: column;
     justify-content: center;
     align-items: center;
 }
 
 .title {
-    font-size : 64px;
+    font-size: 64px;
 }
 
 .menu-item {
-    font-size : 32px;
-}
-.version {
-
+    font-size: 32px;
 }
 
 .select {
-    background-color: black;   
-    color : white;
-    
+    background-color: black;
+    color: white;
 }
-    
 
+.hide {
+    display: none;
+}
